# god-tibo-imagen-web-api

./: .gitignore  README.md  manage.sh  package-lock.json  package.json  start.sh
.github/workflows/: release.yml
fixtures/: malformed.sse  no-image.sse  partial-image.sse  success.sse  unauthorized.json
python/: README.md  pyproject.toml
python/god_tibo_imagen/: __init__.py
python/src/god_tibo_imagen/: __init__.py  auth.py  client.py  config.py  errors.py  extract.py  provider.py  request_builder.py  save.py  sse_parser.py
python/src/gti/: client.py  config.py  provider.py  request_builder.py
python/tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_config.py  test_extract.py  test_provider.py  test_request_builder.py  test_save.py  test_sse_parser.py
scripts/: check.js  smoke-live.sh  sync-version.js
src/: config.js  index.js
src/cli/: generate.js  serve.js
src/server/: app.js  store.js
tests/: codex-cli-provider.test.js  config-defaults.test.js  provider-success.test.js  provider-unauthorized.test.js  request-build.test.js  server-api.test.js  server-store.test.js  stream-sse.test.js
types/: index.d.ts
types/codex/: buildResponsesRequest.d.ts
types/server/: app.d.ts  store.d.ts
