[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "god-tibo-imagen"
version = "0.1.2"
description = "Python SDK for Codex private image generation backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gti"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
